[package]
name = "spl-auction"
version = "0.0.1"
description = "Solana Auction Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["tests/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.6.9"
spl-token = { version="3.1.0", features = [ "no-entrypoint" ] }
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.6.9"
solana-sdk = "1.6.9"

[lib]
crate-type = ["cdylib", "lib"]
